# packrig

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: civ-rig-report.yml
.github/workflows/: build.yml  ci.yml  golden-trace.yml  release.yml  unstable.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  promotion-checklist.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/field-sessions/: RECORDING-FORMAT.md
.planning/field-sessions/baseline-PENDING/: README.md
.planning/field-sessions/recompose-baseline-PENDING/: METHODOLOGY.md  README.md
.planning/phases/00-foundations/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-02-SUMMARY.md  00-03-PLAN.md  00-03-SUMMARY.md  00-04-PLAN.md  00-04-SUMMARY.md  00-05-PLAN.md  00-05-SUMMARY.md
.planning/phases/09-late-tx-ap-decode/: 09-SPEC.md
.planning/phases/09-potacat-late-tx-ap-decode/: 09-SPEC.md
.planning/phases/10-early-decode/: 10-SPEC.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
audio/: build.gradle.kts
core/: build.gradle.kts
data/: build.gradle.kts
data/schemas/net.ft8vc.data.db.Ft8vcDatabase/: 1.json  2.json  3.json
docs/: APP.md  AUDIO.md  CORE.md  DATA.md  FT8_LIB_UPGRADE.md  FT8_NATIVE.md  HARDWARE.md  README.md  RELEASE.md  RIG.md  RIG_MODELS.md  SDK_SETUP.md  TESTING.md  USB_SERIAL_LIB_UPGRADE.md
docs/manual/: README.md  getting-started.md  logging.md  operating.md  settings.md  troubleshooting.md
docs/planning/: PITFALLS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  promotion-checklist.md
docs/planning/field-sessions/: README.md  RECORDING-FORMAT.md
docs/superpowers/plans/: 2026-06-22-decode-list-legibility.md  2026-06-22-early-decode.md  2026-06-22-late-start-ft8-tx.md  2026-06-23-self-tx-decode-row.md  2026-06-24-ft8-snr-fix.md  2026-07-01-pota-activator-logging.md  2026-07-01-qso-sequencing-upgrades.md  2026-07-01-rx-reliability-parity.md  2026-07-02-user-manual.md  2026-07-04-decode-colorscheme.md  2026-07-04-durable-adif-backup.md  2026-07-04-multi-rig-phase1-transport-protocol-seams.md  2026-07-04-radio-settings.md  2026-07-04-wsjtx-log-timing.md  2026-07-05-capture-watchdog.md  2026-07-05-cq-origin-auto-resume-gate.md  2026-07-05-decode-country-code.md  2026-07-05-decode-slot-tint.md  2026-07-05-dt-self-cal-clock-alignment.md  2026-07-05-end-qso-button-and-decode-blocklist.md  2026-07-05-multi-rig-phase2-rig-registry.md  2026-07-05-spectrum-decode-markers.md  2026-07-07-waterfall-occupancy-wsjtx.md  2026-07-10-rig-profiles.md  2026-07-11-auto-rx-monitor.md  2026-07-11-backup-snackbar-location.md  2026-07-11-log-callsign-search.md  2026-07-11-log-tab-logbook-tools.md  2026-07-11-qrz-logbook-upload.md  (+9 more)
ft8-native/: build.gradle.kts
ft8-native/src/main/cpp/: CMakeLists.txt  ft8_jni.cpp
gradle/: libs.versions.toml  verification-metadata.xml
rig/: build.gradle.kts
tools/: gen_country_table.py
(+923 files in other folders)
